--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "dependencies": {
         "@emotion/react": "11.13.5",
         "@emotion/styled": "11.13.0",
-        "@mui/icons-material": "6.1.8",
-        "@mui/material": "6.1.8",
+        "@mui/icons-material": "7.3.4",
+        "@mui/lab": "^7.0.1-beta.18",
+        "@mui/material": "7.3.4",
         "immutable": "^5.1.4",
         "jotai": "^2.15.0",
         "react": "^19.2.0",
