--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "jotai": "^2.15.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
-        "react-router-dom": "7.0.2"
+        "react-router-dom": "7.0.2",
+        "react-window": "^2.2.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.38.0",
