--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -16,7 +16,7 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    build:
+    lint:
         runs-on: ubuntu-latest
 
         steps:
@@ -26,7 +26,28 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 22 # you can adjust if needed
+                  node-version: 22
+
+            - name: Install dependencies
+              uses: bahmutov/npm-install@v1
+
+            - name: Lint project
+              run: npm run lint:ci
+
+            - name: Check formatting
+              run: npm run format:check
+    build:
+        runs-on: ubuntu-latest
+        needs: lint
+
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 22
                   cache: npm
 
             - name: Install dependencies
@@ -38,7 +59,7 @@ jobs:
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: dist # Vite outputs to dist by default
+                  path: dist
 
     deploy:
         needs: build
