--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "vite",
         "build": "tsc --noEmit && vite build && cp dist/index.html dist/viz.html",
         "lint": "eslint .",
+        "lint:ci": "eslint . --max-warnings=0",
         "format": "npx prettier . --write",
         "format:check": "npx prettier . --check",
         "preview": "vite preview"
@@ -37,6 +38,7 @@
         "prettier": "3.6.2",
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.46.2",
+        "user-agent-data-types": "^0.4.2",
         "vite": "^7.1.12",
         "vite-plugin-checker": "^0.11.0"
     }
