--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "jotai": "^2.15.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-hotkeys-hook": "^5.2.1",
         "react-router-dom": "7.0.2",
         "react-window": "^2.2.3"
     },
