--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@codemirror/lang-javascript": "^6.2.4",
+        "@codemirror/state": "^6.5.2",
+        "@codemirror/view": "^6.38.6",
         "@emotion/react": "11.13.5",
         "@emotion/styled": "11.13.0",
         "@mui/icons-material": "7.3.4",
         "@mui/lab": "^7.0.1-beta.18",
         "@mui/material": "7.3.4",
+        "@uiw/codemirror-theme-andromeda": "^4.25.3",
+        "@uiw/react-codemirror": "^4.25.3",
         "immutable": "^5.1.4",
         "jotai": "^2.15.0",
         "react": "^19.2.0",
